fix overlapping text issue.

--- a/schmodel-registration-frontend/src/app/pages/forgot/forgot.component.scss
+++ b/schmodel-registration-frontend/src/app/pages/forgot/forgot.component.scss
@@ -12,13 +12,6 @@ $model-img-size: 150px;
     margin-top: 6%;
   }
 
-  .content-wrapper {
-    flex: 1 0 0;
-    align-items: flex-end;
-    display: flex;
-    min-height: 350px;
-  }
-
   .content-container {
     text-align: center;
     color: white;
@@ -62,7 +55,7 @@ $model-img-size: 150px;
   p {
     font-family: 'Open Sans', sans-serif;
     font-size: 10px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
 
   .form-group {
@@ -278,29 +271,6 @@ $model-img-size: 150px;
 .message-wrapper {
   position: absolute;
   top: 0;
-  right: 0;
-  // width: calc(100% - #{$model-img-size});
-  width: 100%;
-  height: 70px;
-  background-color: #FF4165;
-  color: white;
-  display: flex;
-  align-items: center;
-  padding: 0 5px 0 25px;
-
-  .icon-close {
-    font-weight: bold;
-    font-size: 20px;
-    margin-right: 10px;
-  }
-
-  .message {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12px;
-    text-align: left;
-
-    b {
-      font-size: 14px;
-    }
-  }
+  left: 0;
+  text-align: left;
 }
